k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightmock
  namespace: entreprise-tools
  labels:
    app.kubernetes.io/name: lightmock
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lightmock
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
